Configured PiTest with JUnit 5 and Java 13 - it returns report.